[package]
name = "kotosiro"
version = "0.1.0"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"
rust-version = "1.67"

[dependencies]
anyhow = "1.0.69"
clap = "4.1.4"
config = { version = "0.13.3", default-features = false, features = ["json", "toml", "yaml"] }
dotenv = "0.15.0"
git-version = "0.3.5"
serde = "1.0.152"
serde_json = "1.0.92"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = [ "full", "rt-multi-thread" ] }
