[package]
name = "kotosiro"
version = "0.1.0"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
edition = "2021"
rust-version = "1.67"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = "4.1.4"
config = { version = "0.13.3", default-features = false, features = ["json", "toml", "yaml"] }
chrono = "0.4.23"
colored = "2.0.0"
dotenv = "0.15.0"
getset = "0.1.2"
git-version = "0.3.5"
lapin = "2.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_yaml = "0.9.17"
sqlx = { version = "0.6.2", features = ["postgres", "chrono", "uuid", "json", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.25.0", features = [ "full", "rt-multi-thread" ] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.3.0", features = [ "v4", "serde" ] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
futures = "0.3.26"
serial_test = "0.4.0"
testutils = { path = "testutils" }
testcontainers = "0.14.0"